--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.12",
     "nodemon": "^2.0.14",
-    "sha1": "^1.1.1"
+    "sha1": "^1.1.1",
+    "uniqid": "^5.4.0"
   }
 }
